# smart-tracking

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  tracker
source/: Database.cpp  Database.h  Object.cpp  Object.h  objectTracking.cpp
test/: config.py  position.py
